# movie-recommender-system-clean

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini  test_mongo_connection.py
.github/workflows/: ci.yml
apps/api/app/: logging_setup.py  main.py  startup_diagnostics.py
apps/api/app/routes/: health.py  ui.py
apps/api/app/schemas/: recommendations.py
apps/api/app/templates/: index.html
data/: README_data.md  movies.json  users.csv
docs/: SYSTEM_MAP.md
docs/architecture/: production-architecture.mmd
models/: svd_model.pth
movie-ui/: index.html  package-lock.json  package.json
movie-ui/src/: App.jsx
requirements/: api.in  api.lock.txt  base.in  base.lock.txt
src/recommender/: __init__.py  bootstrap.py  compute_similarity_item.py  compute_similarity_user.py  convert_ratings_to_json.py  evaluate_model.py  evaluate_similarity_models.py  evaluate_svd.py  import_movies.py  import_ratings.py  load_data_from_mongo.py  logging_utils.py  movie_project.py  predict_cf.py  prepare_matrix.py  svd_model.py
src/recommender/data/load_data/: load_data_from_mongo.py
src/recommender/domain/: predict_cf.py  ranking.py  recommend_for_user.py
src/recommender/evaluation/: baselines.py  cli_gate.py  model_runner.py  protocol.py  runner.py  similarity_small.py
src/recommender/observability/: metrics.py
src/recommender/service/: recommender_service.py
tests/: test_evaluate_model.py  test_predict_cf.py  test_svd_model.py
tests/fixtures/: ratings_small.csv
tests/integration/: test_observability_contract.py  test_openapi_contract.py  test_request_id.py
tests/unit/data/: test_load_data_from_mongo.py
